--- a/PizzaExpress/PizzaExpress/PizzaExpress.csproj
+++ b/PizzaExpress/PizzaExpress/PizzaExpress.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Models\DAOCliente.cs" />
     <Compile Include="Models\DAOFuncionario.cs" />
     <Compile Include="Models\DAOProduto.cs" />
+    <Compile Include="Models\DAOSabor.cs" />
     <Compile Include="Models\Funcionario.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ItensPedido.cs" />
@@ -282,10 +283,15 @@
     <Content Include="Views\Produto\Edit.cshtml" />
     <Content Include="Views\Produto\Index.cshtml" />
     <Content Include="Views\Produto\ProcurarProduto.cshtml" />
+    <Content Include="Views\Sabor\ProcurarSabor.cshtml" />
+    <Content Include="Views\Sabor\Index.cshtml" />
+    <Content Include="Views\Sabor\Create.cshtml" />
+    <Content Include="Views\Sabor\Details.cshtml" />
+    <Content Include="Views\Sabor\Edit.cshtml" />
+    <Content Include="Views\Sabor\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Sabor\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
