--- a/PizzaExpress/PizzaExpress/PizzaExpress.csproj
+++ b/PizzaExpress/PizzaExpress/PizzaExpress.csproj
@@ -349,6 +349,7 @@
     <Content Include="Views\Pedido\Index.cshtml" />
     <Content Include="Views\Pedido\ProcurarPedido.cshtml" />
     <Content Include="Views\Pedido\Create.cshtml" />
+    <Content Include="Views\Pedido\ListaDePizzasDoPedido.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
