--- a/PizzaExpress/PizzaExpress/PizzaExpress.csproj
+++ b/PizzaExpress/PizzaExpress/PizzaExpress.csproj
@@ -191,6 +191,23 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704231926364_1.0.cs" />
+    <Compile Include="Migrations\201704231926364_1.0.Designer.cs">
+      <DependentUpon>201704231926364_1.0.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704231932334_1.2.cs" />
+    <Compile Include="Migrations\201704231932334_1.2.Designer.cs">
+      <DependentUpon>201704231932334_1.2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704231934067_1.3.cs" />
+    <Compile Include="Migrations\201704231934067_1.3.Designer.cs">
+      <DependentUpon>201704231934067_1.3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704231946075_1.4.cs" />
+    <Compile Include="Migrations\201704231946075_1.4.Designer.cs">
+      <DependentUpon>201704231946075_1.4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Conexao.cs" />
@@ -360,6 +377,20 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704231926364_1.0.resx">
+      <DependentUpon>201704231926364_1.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704231932334_1.2.resx">
+      <DependentUpon>201704231932334_1.2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704231934067_1.3.resx">
+      <DependentUpon>201704231934067_1.3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704231946075_1.4.resx">
+      <DependentUpon>201704231946075_1.4.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
