--- a/PizzaExpress/PizzaExpress/PizzaExpress.csproj
+++ b/PizzaExpress/PizzaExpress/PizzaExpress.csproj
@@ -361,13 +361,12 @@
     <Content Include="Views\Sabor\Details.cshtml" />
     <Content Include="Views\Sabor\Edit.cshtml" />
     <Content Include="Views\Sabor\Delete.cshtml" />
-    <Content Include="Views\Pizza\Index.cshtml" />
-    <Content Include="Views\Pizza\ProcurarPizza.cshtml" />
-    <Content Include="Views\Pedido\ProcurarPedido.cshtml" />
     <Content Include="Views\Pedido\Create.cshtml" />
     <Content Include="Views\Pedido\ListaDePizzasDoPedido.cshtml" />
     <Content Include="Views\Pedido\ListaDeProdutosDoPedido.cshtml" />
     <Content Include="Views\Pedido\Index.cshtml" />
+    <Content Include="Views\Pizza\Details.cshtml" />
+    <Content Include="Views\Pedido\ProcurarPedido.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
