--- a/PizzaExpress/PizzaExpress/PizzaExpress.csproj
+++ b/PizzaExpress/PizzaExpress/PizzaExpress.csproj
@@ -365,8 +365,9 @@
     <Content Include="Views\Pedido\ListaDePizzasDoPedido.cshtml" />
     <Content Include="Views\Pedido\ListaDeProdutosDoPedido.cshtml" />
     <Content Include="Views\Pedido\Index.cshtml" />
-    <Content Include="Views\Pizza\Details.cshtml" />
     <Content Include="Views\Pedido\ProcurarPedido.cshtml" />
+    <Content Include="Views\Pizza\Details.cshtml" />
+    <Content Include="Views\Pedido\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
