Ajuste formulário Cliente, Sabor e Produto
- Ajuste nos Data-Annotation das classes Cliente, Sabor e Produto
- Tradução nas Views Produto e Sabor

--- a/PizzaExpress/PizzaExpress/Web.config
+++ b/PizzaExpress/PizzaExpress/Web.config
@@ -18,7 +18,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <globalization culture="pt-BR" uiCulture="pt-BR" enableClientBasedCulture="true" />
+    <globalization culture="pt-BR" uiCulture="pt-BR" enableClientBasedCulture="false" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
