--- a/PizzaExpress/PizzaExpress/PizzaExpress.csproj
+++ b/PizzaExpress/PizzaExpress/PizzaExpress.csproj
@@ -234,6 +234,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Custom.css" />
+    <Content Include="Content\Icons\Farm-Fresh_pizza.png" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
