--- a/PizzaExpress/PizzaExpress/Web.config
+++ b/PizzaExpress/PizzaExpress/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-TC5QN9P;Initial Catalog=PizzaExpress;User ID=sa;Password=evangelion" providerName="System.Data.SqlClient" />
+    <add name="PizzaExpressEntity" connectionString="Data Source=IGOR;Initial Catalog=PizzaExpress;User ID=sa;Password=evangelion" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
